Add drivers and update ignore

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,54 @@ repman/bin64/libssl-1_1-x64.dll
 server/web/repwebexe
 repman/bin64/libcrypto-1_1-x64.dll
 repman/bin32/GDS32.DLL
+repman/binr32/net2/FirebirdSql.Data.FirebirdClient.dll
+repman/binr32/net2/ICSharpCode.SharpZipLib.dll
+repman/binr32/net2/Microsoft.Bcl.AsyncInterfaces.dll
+repman/binr32/net2/Microsoft.Bcl.HashCode.dll
+repman/binr32/net2/Microsoft.Data.Sqlite.dll
+repman/binr32/net2/Microsoft.Extensions.Logging.Abstractions.dll
+repman/binr32/net2/MySqlConnector.dll
+repman/binr32/net2/Newtonsoft.Json.dll
+repman/binr32/net2/Npgsql.dll
+repman/binr32/net2/Oracle.ManagedDataAccess.dll
+repman/binr32/net2/printreport.exe.config
+repman/binr32/net2/RBush.dll
+repman/binr32/net2/Reportman.Drawing.dll
+repman/binr32/net2/Reportman.Drawing.dll.config
+repman/binr32/net2/Reportman.Drawing.Excel.dll
+repman/binr32/net2/Reportman.Drawing.Forms.dll
+repman/binr32/net2/Reportman.Drawing.Forms.dll.config
+repman/binr32/net2/Reportman.Drawing.Windows.dll
+repman/binr32/net2/Reportman.Reporting.dll
+repman/binr32/net2/Reportman.Reporting.dll.config
+repman/binr32/net2/Reportman.Reporting.Forms.dll
+repman/binr32/net2/Reportman.Reporting.Forms.dll.config
+repman/binr32/net2/Savage.Data.dll
+repman/binr32/net2/Savage.Data.MySqlClient.dll
+repman/binr32/net2/Savage.OptimizedDataReader.dll
+repman/binr32/net2/SharpDX.Direct2D1.dll
+repman/binr32/net2/SharpDX.dll
+repman/binr32/net2/SharpDX.DXGI.dll
+repman/binr32/net2/SixLabors.Fonts.dll
+repman/binr32/net2/SQLitePCLRaw.batteries_v2.dll
+repman/binr32/net2/SQLitePCLRaw.core.dll
+repman/binr32/net2/SQLitePCLRaw.provider.e_sqlite3.dll
+repman/binr32/net2/System.Buffers.dll
+repman/binr32/net2/System.Diagnostics.DiagnosticSource.dll
+repman/binr32/net2/System.Formats.Asn1.dll
+repman/binr32/net2/System.IO.Pipelines.dll
+repman/binr32/net2/System.Memory.dll
+repman/binr32/net2/System.Numerics.Vectors.dll
+repman/binr32/net2/System.Runtime.CompilerServices.Unsafe.dll
+repman/binr32/net2/System.Text.Encodings.Web.dll
+repman/binr32/net2/System.Text.Json.dll
+repman/binr32/net2/System.Threading.Tasks.Extensions.dll
+repman/binr32/net2/System.ValueTuple.dll
+repman/binr32/net2/toolstrip.dll
+repman/binr32/net2/zxing.dll
+repman/binr32/net2/ClosedXML.dll
+repman/binr32/net2/ClosedXML.Parser.dll
+repman/binr32/net2/DocumentFormat.OpenXml.dll
+repman/binr32/net2/DocumentFormat.OpenXml.Framework.dll
+repman/binr32/net2/e_sqlite3.dll
+repman/binr32/net2/ExcelNumberFormat.dll
