Ignore getit zip

--- a/.gitignore
+++ b/.gitignore
@@ -200,3 +200,4 @@ repman/binr32/net2/ExcelNumberFormat.dll
 *.dcr
 getit/Reportman_PDF/Source/Delphi11/Reportman_PDF_nonshared.a
 *.RES
+getit/Reportman_PDF.zip
