--- a/getit/package.json
+++ b/getit/package.json
@@ -24,12 +24,12 @@
      "MinPV": "",
      "MaxPV": "",
      "Parameter": [
-       {"Parameter": "$(BDSCatalogRepository)\\Reportman.PDF\\Reportman_PDF\\Source\\Common"},
+       {"Parameter": "$(BDSCatalogRepository)\\Reportman\\Source\\Common"},
        {"Parameter": "cPasLibraryPath"},
        {"Parameter": "Delphi.Personality"}
      ]
    },
-      {
+   {
     "Id": "2",
     "ActionId": "6",
     "Type": "3",
@@ -38,7 +38,7 @@
     "MinPV": "",
     "MaxPV": "",
     "Parameter": [
-      { "Parameter": "$(BDSCatalogRepository)\\Reportman.PDF\\Reportman_PDF\\Source\\Delphi12\\Reportman_PDF.dproj" },
+      { "Parameter": "$(BDSCatalogRepository)\\Reportman\\Source\\Delphi\\reportman_rtl.dproj" },
       { "Parameter": "Win32;Win64" },
       { "Parameter": "Debug" }
     ],
@@ -54,14 +54,88 @@
     "MinPV": "",
     "MaxPV": "",
     "Parameter": [
-      { "Parameter": "Reportman_PDF.bpl" }
+      { "Parameter": "reportman_rtl.bpl" }
     ],
     "ActionName": "InstallPackage",
-    "Description": "Install the Reportman PDF design-time package"
+    "Description": "Install the Reportman RTL design-time package"
+   },
+   {
+    "Id": "4",
+    "ActionId": "6",
+    "Type": "3",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "$(BDSCatalogRepository)\\Reportman\\Source\\Delphi\\reportman_vcl.dproj" },
+      { "Parameter": "Win32;Win64" },
+      { "Parameter": "Debug" }
+    ],
+    "ActionName": "CompileProject",
+    "Description": "Compile Reportman VCL package"
     },
+      {
+    "Id": "5",
+    "ActionId": "7",
+    "Type": "3",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "reportman_vcl.bpl" }
+    ],
+    "ActionName": "InstallPackage",
+    "Description": "Install the Reportman VCL package"
+   },
 
-  {
-     "Id": "4",
+   {
+    "Id": "6",
+    "ActionId": "6",
+    "Type": "3",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "$(BDSCatalogRepository)\\Reportman\\Source\\Delphi\\reportman_designvcl.dproj" },
+      { "Parameter": "Win32;Win64" },
+      { "Parameter": "Debug" }
+    ],
+    "ActionName": "CompileProject",
+    "Description": "Compile Reportman Design VCL package"
+    },
+      {
+    "Id": "7",
+    "ActionId": "7",
+    "Type": "3",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "reportman_designvcl.bpl" }
+    ],
+    "ActionName": "InstallPackage",
+    "Description": "Install the Reportman Design VCL package"
+   },
+   {
+  "Id": "8",
+  "ActionId": "41",
+  "Type": "3",
+  "RequireElevation": "0",
+  "Active": "1",
+  "MinPV": "",
+  "MaxPV": "",
+  "Parameter": [
+    { "Parameter": "$(BDSCatalogRepository)\\Reportman\\Examples\\VCLDemo\\VCLDemoGroup.groupproj" }
+  ],
+  "ActionName": "OpenProject",
+  "Description": "Open the VCL demo group project after install"
+},
+   {
+     "Id": "10",
      "ActionId": "2",
      "ActionName": "RemoveOptionPath",
      "Type": "5",
@@ -71,13 +145,13 @@
      "MinPV": "",
      "MaxPV": "",
      "Parameter": [
-       {"Parameter": "$(BDSCatalogRepository)\\Reportman.PDF\\Reportman_PDF\\Source\\Common"},
+       {"Parameter": "$(BDSCatalogRepository)\\Reportman\\Source\\Common"},
        {"Parameter": "cPasLibraryPath"},
        {"Parameter": "Delphi.Personality"}
      ]
    },
    {
-    "Id": "5",
+    "Id": "11",
     "ActionId": "8",
     "Type": "5",
     "RequireElevation": "0",
@@ -85,10 +159,38 @@
     "MinPV": "",
     "MaxPV": "",
     "Parameter": [
-      { "Parameter": "Reportman_PDF.bpl" }
+      { "Parameter": "reportman_rtl.bpl" }
     ],
     "ActionName": "UninstallPackage",
-    "Description": "UnInstall the Reportman PDF design-time package"
+    "Description": "UnInstall the Reportman RTL package"
+    },
+       {
+    "Id": "11",
+    "ActionId": "8",
+    "Type": "5",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "reportman_vcl.bpl" }
+    ],
+    "ActionName": "UninstallPackage",
+    "Description": "UnInstall the Reportman VCL package"
+    },
+    {
+    "Id": "12",
+    "ActionId": "8",
+    "Type": "5",
+    "RequireElevation": "0",
+    "Active": "1",
+    "MinPV": "",
+    "MaxPV": "",
+    "Parameter": [
+      { "Parameter": "reportman_designvcl.bpl" }
+    ],
+    "ActionName": "UninstallPackage",
+    "Description": "UnInstall the Reportman Design VCL package"
     }
 ]
 }
