Prepare getit package and image

--- a/.gitignore
+++ b/.gitignore
@@ -203,3 +203,4 @@ getit/Reportman_PDF/Source/Delphi11/Reportman_PDF_nonshared.a
 getit/Reportman_PDF.zip
 getit/Reportman_PDF/Source/Examples/CreatePDF/Android64/
 getit/Source/Examples/CreatePDF/Android64/
+getit/Reportman.zip
